# libra

./: Cargo.toml  README.md
client/: Cargo.toml
client/libra_wallet/: Cargo.toml
client/libra_wallet/src/: io_utils.rs  key_factory.rs  wallet_library.rs
client/src/: client_proxy.rs  commands.rs  grpc_client.rs  lib.rs  main.rs  submit_transaction_command.rs  transfer_commands.rs
consensus/src/chained_bft/consensus_types/: timeout_msg.rs
language/: README.md
language/bytecode_verifier/src/: absint.rs  code_unit_verifier.rs  type_memory_safety.rs
language/compiler/ir_to_bytecode/src/: compiler.rs
language/compiler/src/: main.rs
language/stdlib/modules/: libra_coin.mvir
language/stdlib/natives/: Cargo.toml
language/tools/cost_synthesis/src/: stack_generator.rs
language/tools/cost_synthesis/src/global_state/: inhabitor.rs
language/vm/src/: deserializer.rs  file_format_common.rs  gas_schedule.rs  proptest_types.rs  serializer.rs  views.rs
libra_node/src/: main_node.rs
mempool/: Cargo.toml
server/: Cargo.toml
storage/schemadb/: Cargo.toml
storage/sparse_merkle/src/nibble_path/: mod.rs  nibble_path_test.rs
terraform/: variables.tf
testsuite/cluster_test/: Cargo.toml
testsuite/cluster_test/src/: cluster.rs  instance.rs  lib.rs  main.rs
testsuite/cluster_test/src/experiments/: mod.rs  reboot_random_validator.rs
types/src/: transaction_helpers.rs  validator_public_keys.rs
