[package]
name = "schemadb"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
failure = { path = "../../common/failure_ext", package = "failure_ext" }
rocksdb = "0.10.1"

[dev-dependencies]
byteorder = "1.3.1"
tempfile = "3.0.6"
