[package]
name = "schemadb"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
failure = { path = "../../common/failure_ext", package = "failure_ext" }
# Fork note: this breaks the storage crate due to version conflict with dependency
# we currently deal with it because we are interested exclusively in wallet functionality
rocksdb = "0.10.1"

[dev-dependencies]
byteorder = "1.3.1"
tempfile = "3.0.6"
